# apex-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  index.py  pyproject.toml  vercel.json
api/: index.py
docker/postgres/init/: 001_schema.sql
docs/: claude-oauth-plan.md  daily-metrics.md  day-to-day-workflow.md  external-service-sync.md  remote-mcp-from-scratch-guide.md  vercel-deploy.md  vercel-supabase-setup.md
skills/apex-endurance-coach/: SKILL.md
skills/apex-endurance-coach/agents/: openai.yaml
skills/apex-endurance-coach/references/: tool-map.md
src/apex_mcp_server/: __init__.py  asgi.py  auth.py  config.py  external_services.py  identity.py  models.py  server.py  storage.py  strava_oauth.py
tests/: test_auth.py  test_config.py  test_external_services.py  test_identity.py  test_server.py  test_storage.py  test_strava_oauth.py
