[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "apex-mcp-server"
version = "0.1.0"
description = "A minimal FastMCP profile pilot server for Vercel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0,<0.32",
    "fastmcp>=3.2.3,<4",
    "httpx>=0.28.0,<0.29",
    "pytest>=8.4.0,<9",
    "pytest-asyncio>=1.2.0,<2",
    "ruff>=0.14.0,<0.15",
    "uvicorn>=0.37.0,<0.38",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apex_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
